small changes in service part (index)

--- a/labdhi.aikyam.agency/index.html
+++ b/labdhi.aikyam.agency/index.html
@@ -452,10 +452,10 @@
             </div>
             <div class="service-overlay">
               <h3><i class="fi flaticon-construction"></i> Solenoid Valves</h3>
-              <p>
+              <p class="service-para">
                 Electromagnetic valves used for fluid control in automation systems. Available in multiple sizes and coil configurations.
               </p>
-              <a href="solenoid-valve-2.html" class="btn btn-light btn-sm w-auto align-self-start">Get Details</a>
+              <a href="solenoid-valve-2.html" class="btn btn-light btn-sm w-auto align-self-start service-dt">Get Details</a>
             </div>
           </div>
 
@@ -474,7 +474,7 @@
             </div>
             <div class="service-overlay">
               <h3><i class="fi flaticon-construction"></i> Pneumatic Fittings</h3>
-              <p>
+              <p class="service-para">
                 Push-in and threaded fittings suitable for compressed air systems and automation lines. Leak-proof and durable.
               </p>
               <a href="pneumatic-fittings-2.html" class="btn btn-light btn-sm w-auto align-self-start">Get Details</a>
@@ -496,7 +496,7 @@
             </div>
             <div class="service-overlay">
               <h3><i class="fi flaticon-construction"></i> Pipe Fittings</h3>
-              <p>
+              <p class="service-para">
                 Threaded and welded pipe fittings for industrial pipelines. Available in stainless steel, brass, and carbon steel.
               </p>
               <a href="pipe-fittings-2.html" class="btn btn-light btn-sm w-auto align-self-start">Get Details</a>
