Labdhi.Aikyam.Agency

--- a/labdhi.aikyam.agency/Machining-Work.html
+++ b/labdhi.aikyam.agency/Machining-Work.html
@@ -52,7 +52,6 @@
 
     <!-- start page-wrapper -->
     <div class="page-wrapper">
-
         <header id="header" class="site-header header-style-4">
         <div class="topbar topbar-style-2 desktop-only">
           <div class="container">
@@ -106,69 +105,94 @@
         <!-- end topbar -->
 
         <nav class="navigation navbar navbar-default">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="open-btn">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <div class="site-logo">
-                <a href="index.html"
-                  ><img src="assets/images/Labdhi.png" alt
-                /></a>
-              </div>
-            </div>
-            <div
-              id="navbar"
-              class="navbar-collapse collapse navbar-right navigation-holder"
-            >
-              <button class="close-navbar"><i class="fa fa-close"></i></button>
-              <ul class="nav navbar-nav">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li class="menu-item-has-children">
-    <a href="#">Products</a>
-    <ul class="sub-menu">
-      <li class="menu-item-has-children">
-        <a href="Machining-Work.html">Machining Work</a>
-        <ul class="sub-menu">
-          <li><a href="#">CNC Turning</a></li>
-          <li><a href="#">Milling</a></li>
-          <li><a href="#">Drilling</a></li>
-        </ul>
-      </li>
-      <li><a href="Solenoid-Valve.html">Solenoid Valve</a></li>
-      <li><a href="Pneumatic-Fittings.html">Pneumatic Fittings</a></li>
-      <li><a href="Pipe-Fittings.html">Pipe Fittings</a></li>
-      <li><a href="Pressure-Gauges.html">Pressure Gauges</a></li>
-      <li><a href="Pressure-Switch.html">Pressure Switch</a></li>
-      <li><a href="Burner-Spare.html">Burner Spare Parts</a></li>
-      <li><a href="Gas-Safety-Regulators.html">Gas Safety Regulators</a></li>
-      <li><a href="Lubricator-Air-Filter-Regulator.html">Lubricator Air Filter Regulator</a></li>
-      <li><a href="Pneumatic-Accessories.html">Pneumatic Accessories</a></li>
-    </ul>
-  </li>
-  <li><a href="contact.html">Contact</a></li>
-</ul>
-
-            </div>
-            <!-- end of nav-collapse -->
-
-            <div class="cart-contact">
-              <div class="mini-cart">
-                <button class="cart-toggle-btn">
-                  <i class="fas fa-download"></i> Download
-                </button>
-                
-
-                
-              </div>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="open-btn navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#navbar"
+            aria-expanded="false"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="site-logo">
+            <a href="index.html"
+              ><img src="assets/images/Labdhi.png" alt=""
+            /></a>
           </div>
-          <!-- end of container -->
-        </nav>
+        </div>
+
+        <div
+          id="navbar"
+          class="navbar-collapse collapse navbar-right navigation-holder"
+        >
+          <button class="close-navbar"><i class="fa fa-close"></i></button>
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="menu-item-has-children">
+              <a href="#">Products</a>
+              <ul class="sub-menu dropdown-menu">
+                <li class="menu-item-has-children">
+                  <a href="Solenoid-Valve.html">Machining Work</a>
+                  <ul class="sub-menu dropdown-menu">
+                    <li><a href="Gear-Manufacturing.html">Gear Manufacturing</a></li>
+                    <li><a href="Shaft-Manufacturing.html">Shaft Manufacturing</a></li>
+                    <li><a href="Pulley.html">Pulley</a></li>
+                    <li><a href="Timing-Belt-Pulley.html">Timing Belt Pulley</a></li>
+                    <li><a href="Bracket.html">Bracket</a></li>
+                    <li><a href="Spocket-Wheel.html">Spocket Wheel</a></li>
+                    <li><a href="Dye-Moulding-Item.html">Dye Moulding Item</a></li>
+                    <li><a href="Customised-Bolt.html">Customised Bolt</a></li>
+                    <li><a href="Cyclone-Gear.html">Cyclone Gear</a></li>
+                    <li><a href="Rack-Gear.html">Rack Gear</a></li>
+                    <li><a href="Fabrication-Items.html">Fabrication Items</a></li>
+                    <li><a href="Coating-Item.html">Coating Item</a></li>
+                    <li><a href="Varum-Gear.html">Varum Gear</a></li>
+                    <li><a href="Bewel-Gear.html">Bewel Gear</a></li>
+                    <li><a href="Bewel-Gear.html">Dye Moulding</a></li>
+
+                  </ul>
+                </li>
+                <li><a href="Qrc-Nrv.html">QRC and NRV</a></li>
+                <li><a href="Tube-Fittings.html">Tube Fitting</a></li>
+                <li><a href="Needle-Valve.html">Needle Valve</a></li>
+                <li><a href="Solenoid-Valve.html">Solenoid Valve</a></li>
+                <li><a href="Pneumatic-Fittings.html">Pneumatic Fittings</a></li>
+                <li><a href="Pipe-Fittings.html">Pipe Fittings</a></li>
+                <li><a href="Pressure-Gauges.html">Pressure Gauges</a></li>
+                <li><a href="Pressure-Switch.html">Pressure Switch</a></li>
+                <li><a href="Burner-Spare.html">Burner Spare Parts</a></li>
+                <li><a href="Gas-Safety-Regulators.html">Gas Safety Regulators</a></li>
+                <li><a href="Lubricator-Air-Filter-Regulator.html">Lubricator Air Filter Regulator</a></li>
+                <li><a href="Pneumatic-Accessories.html">Pneumatic Accessories</a></li>
+              </ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="brands.html">Brands</a></li>
+          </ul>
+        </div>
+        <!-- end of nav-collapse -->
+
+        <div class="cart-contact">
+          <div class="mini-cart">
+            <button class="cart-toggle-btn">
+              <a
+                href="./assets/pdf/Labdh ProductS Catalog.pdf"
+                download
+                class="cart-toggle-btn"
+                ><i class="fas fa-download"></i> Download</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- end of container -->
+    </nav>
         <!-- end navigation -->
       </header>
 
