--- a/labdhi.aikyam.agency/index.html
+++ b/labdhi.aikyam.agency/index.html
@@ -50,6 +50,9 @@
 
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<!-- Font Awesome 4.7 for Bootstrap 3.x -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
     <!-- Custom styles for this template -->
@@ -64,6 +67,17 @@
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+/>
+
+<!-- Font Awesome 4 (best for old Bootstrap 3) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="assets/fonts/flaticon/flaticon.css">
+<link rel="stylesheet" href="assets/css/flaticon.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/fabrxadmin/flaticon/font/flaticon.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 />
   </head>
 
@@ -98,13 +112,13 @@
           <div class="col col-sm-2">
             <div class="social">
               <span>Follow: </span>
-              <ul class="social-links">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-              </ul>
+               <ul class="social-links flex gap-4">
+  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+  <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+  <li><a href="#"><i class="fas fa-rss"></i></a></li>
+</ul>
             </div>
           </div>
         </div>
@@ -147,7 +161,7 @@
               <a href="#">Products</a>
               <ul class="sub-menu dropdown-menu">
                 <li class="menu-item-has-children">
-                  <a href="Machining-Work.html">Machining Work</a>
+                  <a href="Solenoid-Valve.html">Machining Work</a>
                   <ul class="sub-menu dropdown-menu">
                     <li><a href="Gear-Manufacturing.html">Gear Manufacturing</a></li>
                     <li><a href="Shaft-Manufacturing.html">Shaft Manufacturing</a></li>
@@ -155,13 +169,15 @@
                     <li><a href="Timing-Belt-Pulley.html">Timing Belt Pulley</a></li>
                     <li><a href="Bracket.html">Bracket</a></li>
                     <li><a href="Spocket-Wheel.html">Spocket Wheel</a></li>
-                    <li><a href="Dye-Moulding-Item.html">Dye Moulding Item</a></li>
                     <li><a href="Customised-Bolt.html">Customised Bolt</a></li>
                     <li><a href="Cyclone-Gear.html">Cyclone Gear</a></li>
                     <li><a href="Rack-Gear.html">Rack Gear</a></li>
                     <li><a href="Fabrication-Items.html">Fabrication Items</a></li>
                     <li><a href="Coating-Item.html">Coating Item</a></li>
                     <li><a href="Varum-Gear.html">Varum Gear</a></li>
+                    <li><a href="Bewel-Gear.html">Bewel Gear</a></li>
+                    <li><a href="Dye-Moulding-Item.html">Dye Moulding</a></li>
+
                   </ul>
                 </li>
                 <li><a href="Qrc-Nrv.html">QRC and NRV</a></li>
@@ -186,14 +202,15 @@
 
         <div class="cart-contact">
           <div class="mini-cart">
-            <button class="cart-toggle-btn">
               <a
-                href="./assets/pdf/Labdh ProductS Catalog.pdf"
-                download
-                class="cart-toggle-btn"
-                ><i class="fas fa-download"></i> Download</a
-              >
-            </button>
+  href="./assets/pdf/Labdh ProductS Catalog.pdf"
+  download
+  class="d-inline-flex align-items-center"
+  style="color: black; font-weight: 900; text-decoration: none; font-size: 14px; line-height: 1;"
+>
+  <i class="fas fa-download" style="color: black; margin-right: 4px; display: inline-block;"></i> Download
+</a>
+
           </div>
         </div>
       </div>
@@ -499,11 +516,11 @@
 
       <!-- start of services -->
        <!-- start of services -->
-<section class="py-5">
+<section class="" style="margin: 2rem 0 !important;">
   <div class="container">
     <div class="row mb-4">
-      <div class="col-lg-8 mx-auto text-center">
-        <h2 class="fw-bold">Our Services</h2>
+      <div class="col-lg-12 mx-auto text-center">
+        <h2 class="fw-bold mt-5">Our Services</h2>
       </div>
     </div>
 
@@ -519,13 +536,13 @@
               class="service-image"
             />
             <div class="service-title">
-              <i class="fi flaticon-construction"></i>
+              <i class="fa fa-cogs service-icon"></i>
               <a href="solenoid-valve-2.html" class="text-decoration-none text-dark flex-grow-1">
                 Solenoid Valves
               </a>
             </div>
             <div class="service-overlay">
-              <h3><i class="fi flaticon-construction"></i> Solenoid Valves</h3>
+              <h3><i class="fa fa-cogs service-icon"></i> Solenoid Valves</h3>
               <p class="service-para">
                 Electromagnetic valves used for fluid control in automation systems. Available in multiple sizes and coil configurations.
               </p>
@@ -541,17 +558,17 @@
               class="service-image"
             />
             <div class="service-title">
-              <i class="fi flaticon-construction"></i>
+              <i class="fa fa-cogs service-icon"></i>
               <a href="pneumatic-fittings-2.html" class="text-decoration-none text-dark flex-grow-1">
                 Pneumatic Fittings
               </a>
             </div>
             <div class="service-overlay">
-              <h3><i class="fi flaticon-construction"></i> Pneumatic Fittings</h3>
+              <h3><i class="fa fa-cogs service-icon"></i> Pneumatic Fittings</h3>
               <p class="service-para">
                 Push-in and threaded fittings suitable for compressed air systems and automation lines. Leak-proof and durable.
               </p>
-              <a href="pneumatic-fittings-2.html" class="btn btn-light btn-sm w-auto align-self-start">Get Details</a>
+              <a href="solenoid-valve-2.html" class="btn btn-light btn-sm w-auto align-self-start service-dt">Get Details</a>
             </div>
           </div>
 
@@ -563,17 +580,18 @@
               class="service-image"
             />
             <div class="service-title">
-              <i class="fi flaticon-construction"></i>
+              <i class="fa fa-cogs service-icon"></i>
               <a href="pipe-fittings-2.html" class="text-decoration-none text-dark flex-grow-1">
                 Pipe Fittings
               </a>
             </div>
             <div class="service-overlay">
-              <h3><i class="fi flaticon-construction"></i> Pipe Fittings</h3>
+              <h3><i class="fa fa-cogs service-icon"></i> Pipe Fittings</h3>
               <p class="service-para">
                 Threaded and welded pipe fittings for industrial pipelines. Available in stainless steel, brass, and carbon steel.
               </p>
-              <a href="pipe-fittings-2.html" class="btn btn-light btn-sm w-auto align-self-start">Get Details</a>
+                   <a href="solenoid-valve-2.html" class="btn btn-light btn-sm w-auto align-self-start service-dt text-dark">Get Details</a>
+
             </div>
           </div>
 
@@ -582,6 +600,8 @@
     </div>
   </div>
 </section>
+
+
 <!-- end of services -->
 
       <!-- end of services -->
@@ -593,32 +613,32 @@
 
         <!-- Logo 1 -->
         <div class="item">
-          <img src="./partners/Adani.png" alt="Logo 1" class="img-fluid">
+          <img src="./assets/images/partners/Adani.png" alt="Logo 1" class="img-fluid">
         </div>
 
         <!-- Logo 2 -->
         <div class="item">
-          <img src="./partners/amns.png" alt="Logo 2" class="img-fluid" />
+          <img src="./assets/images/partners/amns.png" alt="Logo 2" class="img-fluid" />
         </div>
 
         <!-- Logo 3 -->
         <div class="item">
-          <img src="./partners/L&T.png" alt="Logo 3" class="img-fluid" />
+          <img src="./assets/images/partners/birla/aditya-birla-group-seeklogo.png" alt="Logo 3" class="img-fluid" />
         </div>
 
         <!-- Logo 4 -->
         <div class="item">
-          <img src="./partners/tata.png" alt="Logo 4" class="img-fluid" />
+          <img src="./assets/images/partners/tata.png" alt="Logo 4" class="img-fluid" />
         </div>
 
         <!-- Logo 5 -->
         <div class="item">
-          <img src="./partners/maruti.png" alt="Logo 5" class="img-fluid" />
+          <img src="./assets/images/partners/l&t.webp" alt="Logo 5" class="img-fluid" />
         </div>
 
         <!-- Logo 6 -->
         <div class="item">
-          <img src="./partners/birla/aditya-birla-group-seeklogo.png" alt="Logo 6" class="img-fluid" />
+          <img src="./assets/images/partners/L&T.png" alt="Logo 6" class="img-fluid" />
         </div>
 
       </div>
@@ -629,7 +649,7 @@
       <!-- start site-footer -->
       <footer class="site-footer">
         <div class="upper-footer">
-          <div class="container">
+          <div class="container-fluid ff">
             <div class="row">
               <div class="col col-md-3 col-sm-6">
                 <div class="widget about-widget">
@@ -641,6 +661,12 @@
                       <i class="fa fa-home"></i>
                       2nd Floor, 203, Loha Bhavan Income Tax, Navrangpura,
                       Ahmedabad
+                    </li>
+                    <li>
+                      <i class="fa fa-home"></i>
+                     Factory address :- Labdhi engineering pvt ltd 
+361/A-1,GUJARAT RICE MILL COPOUND,DHOBIGHAT,DUDHESHWAR ROAD,O/S. SHAPUR DARWAJA , AHEMDABAD-380004
+PHONE: 94267 67931
                     </li>
                     <li><i class="fa fa-phone"></i> +91 987 654 3210</li>
                     <li>
@@ -655,7 +681,7 @@
                 <div class="widget service-links-widget">
                   <h3>Services</h3>
                   <ul>
-                    <li><a href="Machining-Work.html">⁠machining work</a></li>
+                    <li><a href="Solenoid-Valve.html">⁠machining work</a></li>
                     <li><a href="Solenoid-Valve.html">Solenoid Valve</a></li>
                     <li>
                       <a href="Pneumatic-Fittings.html">Pneumatic Fittings</a>
@@ -666,6 +692,9 @@
 
                     <li><a href="Pressure-Switch.html">Pressure Switch</a></li>
                     <li><a href="Burner-Spare.html">Burner Spare Parts</a></li>
+                    <li><a href="Gas-Safety-Regulators.html">Gas Safety Regulators</a></li>
+                    <li><a href="Lubricator-Air-Filter-Regulator.html">Lubricator Air Filter Regulator</a></li>
+                    <li><a href="Pneumatic-Accessories.html">Pneumatic Accessories</a></li>
                   </ul>
                 </div>
               </div>
@@ -674,11 +703,19 @@
                 <div class="widget quick-links-widget">
                   <h3>Navigation</h3>
                   <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="">Product</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="brands.html">Brands</a></li>
                   </ul>
+                </div>
+              </div>
+
+              <div class="col col-md-3 col-sm-6">
+                 <div class="widget quick-links-widget">
+                  <h3>Contact</h3>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.598506957786!2d72.56552167554416!3d23.038509379162562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e852f0b9dc237%3A0xbc7d253222465b85!2sLoha%20bhavan!5e0!3m2!1sen!2sin!4v1756190066729!5m2!1sen!2sin" width="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
               </div>
             </div>
@@ -713,25 +750,7 @@
  <!-- Swiper JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- <script src="assets/js/other-plugin.js"></script> -->
- <script>
-  $(document).ready(function(){
-    $(".owl-carousel").owlCarousel({
-      items: 3,
-      margin: 30,
-      loop: true,
-      autoplay: true,
-      autoplayTimeout: 5500,
-      autoplayHoverPause: true,
-      nav: true,
-      dots: false,
-      responsive: {
-        0: { items: 1 },
-        600: { items: 2 },
-        1000: { items: 3 }
-      }
-    });
-  });
-</script>
+
 
 <script>
     $(document).ready(function () {
@@ -758,61 +777,6 @@
     });
   </script>
 
-<!-- Initialize Swiper -->
-<script>
-  var swiper = new Swiper('.hero-slider', {
-    loop: true,
-    autoplay: {
-      delay: 5000,
-      disableOnInteraction: false,
-    },
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-  });
-</script>
-
-<!-- navbar -->
- <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const openBtn = document.querySelector(".navbar-toggle.open-btn");
-    const navMenu = document.querySelector(".navigation-holder");
-    const closeBtn = document.querySelector(".close-navbar");
-
-    if (openBtn && navMenu && closeBtn) {
-      openBtn.addEventListener("click", function (e) {
-        e.preventDefault();
-        navMenu.classList.add("active");
-      });
-
-      closeBtn.addEventListener("click", function (e) {
-        e.preventDefault();
-        navMenu.classList.remove("active");
-      });
-    }
-
-    const mobileBreakpoint = 991;
-    if (window.innerWidth <= mobileBreakpoint) {
-      const dropdownAnchors = document.querySelectorAll(
-        ".navigation-holder li.menu-item-has-children > a"
-      );
-
-      dropdownAnchors.forEach(function (anchor) {
-        anchor.addEventListener("click", function (e) {
-          const parentLi = this.parentElement;
-          const hasSubMenu = parentLi.querySelector(".sub-menu");
-
-          // only toggle if submenu exists
-          if (hasSubMenu) {
-            e.preventDefault();
-            parentLi.classList.toggle("open");
-          }
-        });
-      });
-    }
-  });
-</script>
 
 
 
